[package]
name = "lifecycler"
description = "Bevy Game Jam #5 submission. Terminal aquarium."
version = "0.2.0"
edition = "2021"
license = "MIT OR Apache-2.0 OR CC0-1.0"
authors = ["cxreiff <cooper@cxreiff.com>"]
readme = "README.md"
repository = "https://github.com/cxreiff/lifecycler"
categories = ["games", "command-line-interface"]
keywords = ["bevy", "ratatui", "terminal", "tui", "aquarium"]
include = ["/src", "/assets"]

[dependencies]
bevy = "0.14.0"
bevy_atmosphere = "0.10.0"
bevy_embedded_assets = "0.11.0"
bevy_hanabi = "0.12.0"
bevy_ratatui = "0.6.1"
bevy_ratatui_render = "0.5.2"
crossterm = "0.27.0"
rand = "0.8.5"
rand_chacha = "0.3.1"
ratatui = "0.27.0"

[lints.clippy]
too_many_arguments = "allow"
type_complexity = "allow"

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[profile.release]
codegen-units = 1
lto = true
strip = "debuginfo"
opt-level = 'z'

[profile.release-native]
inherits = "release"

[patch.crates-io]
zune-jpeg = { git = "https://github.com/ironpeak/zune-image", rev = "eebb01b72c07aaf8b00200d9d87d4cba6f01651f" }
